backend/gateway_service/manifest/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-service
  type: ClusterIP
  ports:
    protocol: TCP
    port: 8001
    targetPort: 8001
