backend/gateway_service/manifest/gateway-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size:"0"  
    nginx.ingress.kubernetes.io/proxy-read-timeout:"600"
    nginx.ingress.kubernetes.io/proxy-send-timeout:"600"
spec:
  rules:
  - host: mp3converter.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 8001
